Describe the preview features a release enables